--- a/styles.css
+++ b/styles.css
@@ -322,3 +322,9 @@ footer {
     color:#444;
   }
 }
+.myimg {
+    width:250px;
+    height:250px;
+    object-fit:cover;
+    border-radius:50%;
+}
